# optexp

./: .gitmodules  CMakeLists.txt  README.md
src/: Example-1.cpp  Example-2.cpp  Example.cpp  ExpectedInformationEstimator.cpp  ExpectedInformationEstimator.h  Experiment.h  LinearGaussianExperiment.cpp  LinearGaussianExperiment.h  MCMC.h  MossbauerExperiment.h  MultivariateNormal.cpp  MultivariateNormal.h  MultivariateT.cpp  MultivariateT.h  RandomGenerator.h  SimpleExperiment.h  Timer.h  Utilities.cpp  Utilities.h
